# ynab-memo-parser

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yaml  pyproject.toml
docs/: 2_basic_usage.md  2_usage.md  3_reference.md  detailed_usage.md  index.md  reference.md  requirements.txt
tests/: conftest.py  test_category.py  test_categoryrepo.py  test_client.py  test_dummy.py  test_modifiedtransaction.py  test_payee.py  test_payeerepo.py  test_subtransaction.py  test_transationmodifier.py  test_ynabmemoparser.py
ynabmemoparser/: __init__.py  client.py  exceptions.py  parser.py  recordbuilder.py  transactionbuilder.py  ynabmemoparser.py  ynabrecord.py  ynabrecordparser.py
ynabmemoparser/models/: __init__.py  category.py  categorygroup.py  modifiedtransaction.py  originalsubtransaction.py  originaltransaction.py  parsedsubtransaction.py  parsedtransaction.py  payee.py  subtransaction.py  transaction.py  transactionmodifier.py
ynabmemoparser/repos/: __init__.py  categoryrepo.py  payeerepo.py
